--- a/Readme.me
+++ b/Readme.me
@@ -17,7 +17,7 @@ Die in diesem Projekt verwendeten Themen umfassen Folgendes:
 . For-Schleife in JavaScript               (حلقه For در جاوا اسکریپت)
 . Lokale Speicherung in JavaScript         (ذخیره‌سازی محلی در جاوا اسکریپت)  
 . CSS-Manipulationen                       (دست‌کاری CSS)
-. Bedingte Aneeisung in JavaScript         (گزاره شرطی در جاوا اسکریپت)
+. Conditional-rendering in JavaScript         (گزاره شرطی در جاوا اسکریپت)
  
 
  #Backend richtung
